[tool.poetry]
name = "text-classifier"
version = "0.1.0"
description = ""
authors = ["paul-leonard <paul.ryan.leonard@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.9"
pandas = "^1.2.0"
scikit-learn = "^0.24.0"
jupyterlab = "^3.0.0"
numpy = "^1.19.4"

[tool.poetry.dev-dependencies]
black = "^20.8b1"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
